# piccollage-quiz

./: .gitignore  README.md  pyproject.toml
q1/: Dockerfile.db_init  Dockerfile.web  README.md  docker-compose.yaml  imagesearch.py  main.py  pyproject.toml
q1/.devcontainer/: devcontainer.json  docker-compose-dev.yaml
q1/app/: cassandra_utils.py  db.py  main.py  model.py  test_main.py
q1/tools/: db_init.cql  gen_image_vectors.py
q2/: main.py  testcase.py
