[tool.poetry]
name = "piccollage-quiz"
version = "0.1.0"
description = ""
authors = ["Jacob YC <secret104278@gmail.com>"]
readme = "README.md"
packages = [{include = "piccollage_quiz"}]

[tool.poetry.dependencies]
python = ">=3.8"


[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
isort = "^5.12.0"
tqdm = "^4.66.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
